--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QE1M9LY7XZ"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155536671-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-QE1M9LY7XZ');
+      gtag('config', 'UA-155536671-1');
     </script>
-    
+
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,6 +20,7 @@
       name="description"
       content="Intelligently working websites for a living."
     />
+    <meta name="google-site-verification" content="FR8KwWIm65sWPanI1LpGV96dOhob-Z3-rVReCILfJCI" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
