--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ff8103" />
     <meta
       name="description"
-      content="Intelligently working websites for a living."
+      content="Fox Code understands how hard it is to start a website, acquire customers and earn money. That's why we always intelligently work for a living."
     />
     <meta name="google-site-verification" content="FR8KwWIm65sWPanI1LpGV96dOhob-Z3-rVReCILfJCI" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -37,6 +37,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fox Code Tech Solutions</title>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("user_5bruZPr5cuoqyBYpIWpAY");
+      })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
