--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff8103" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="title" content="Fox Code Tech Solutions">
     <meta
       name="description"
       content="Fox Code understands how hard it is to start a website, acquire customers and earn money. That's why we always intelligently work for a living."
     />
+    <meta name="keywords" content="graphic design,web design,web development,small business website,outsourcing,website development,web developer,website developer,website builder,online presence,responsive web design,responsive website,mobile-friendly website,digital marketing,boost sales online,logo design,banner design,landing page,landing page developer,landing page builder,marketing,facebook ads,google analytics,ecommerce website">
+    <meta name="language" content="English">
     <meta name="google-site-verification" content="FR8KwWIm65sWPanI1LpGV96dOhob-Z3-rVReCILfJCI" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
