Change meta description

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="title" content="Fox Code Tech Solutions">
     <meta
       name="description"
-      content="Fox Code understands how hard it is to start a website, acquire customers and earn money. We'll develop your websites intelligently. Why? Because this is what your business needs."
+      content="Fox Code understands how hard it is to develop a website, acquire customers and earn money. We'll develop your websites intelligently. Why? Because this is what your business needs."
     />
     <meta name="keywords" content="graphic design,web design,web development,small business website,outsourcing,website development,web developer,website developer,website builder,online presence,responsive web design,responsive website,mobile-friendly website,digital marketing,boost sales online,logo design,banner design,landing page,landing page developer,landing page builder,marketing,facebook ads,google analytics,ecommerce website">
     <meta name="language" content="English">
