--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       var div = document.createElement('div');
       div.className = 'fb-customerchat';
       div.setAttribute('page_id', '104909511047355');
-      div.setAttribute('ref', '');
+      div.setAttribute('ref', 'b64:bGl2ZS1jaGF0');
       document.body.appendChild(div);
       window.fbMessengerPlugins = window.fbMessengerPlugins || {
         init: function () {
